AUTO_FILES("." "src" "\\.(cpp|h)$")
AUTO_FILES("${ROOT_SOURCE_DIR}/dep/libsundaowen" "src" "\\.(cpp|h)$")
include_directories(${DEP_INCLUDE_DIR})
link_directories(${DEP_LIBRARY_DIR})
add_definitions(-DSDW_MAIN)
ADD_EXE(Gfd2Charset "${src}")
if(CYGWIN)
  target_link_libraries(Gfd2Charset iconv)
endif()
install(TARGETS Gfd2Charset DESTINATION bin)
